[package]
name = "epic_miner"
version = "1.0.2"
authors = ["Epic Developers <mimblewimble@lists.launchpad.net>"]
description = "Mining software for Epic, supports CPU and CUDA GPUs."
build = "src/build/build.rs"
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/epic-miner"
keywords = [ "crypto", "epic", "mimblewimble", "mining"]
autobins = false

[workspace]
members = ["config", "util", "plugin"]

[features]
default = ["tui"]
opencl = ["ocl_cuckatoo", "ocl_cuckaroo", "progpow_miner_opencl", "progpow_opencl", "cuckoo_miner"]
cuda = ["progpow_miner_cuda", "progpow_cuda", "cuckoo_miner_cuda"]
tui = ["cursive"]

[[bin]]
name = "epic-miner"
path = "src/bin/epic_miner.rs"

[dependencies]
backtrace = "0.3"
bufstream = "~0.1"
native-tls = "0.2"
serde = "1"
serde_derive = "1"
serde_json = "1"
slog = { version = "~2.1", features = ["max_level_trace", "release_max_level_trace"] }
term = "0.4"
time = "0.1"
rand = "^0.3.16"

epic_miner_core = { path = "./core", version = "0.1.0" }
epic_miner_util = { path = "./util", version = "1.0.2" }
epic_miner_plugin = { path = "./plugin", version = "1.0.2" }
epic_miner_config = { path = "./config", version = "1.0.2" }
#use this alternative inclusion below to build cuda plugins
ocl_cuckatoo = { path = "./ocl_cuckatoo", version = "1.0.2", optional = true}
ocl_cuckaroo = { path = "./ocl_cuckaroo", version = "1.0.2", optional = true}
randomx = { path = "./randomx-rust", version = "0.1.0" }
randomx_miner = { path = "./randomx-miner", version = "0.1.0" }

[[test]]
name = "cucumber"
harness = false

[dependencies.cursive]
version = "0.12.0"
optional = true

[dependencies.cuckoo_miner_cuda]
package = "cuckoo_miner"
path = "./cuckoo-miner"
version = "1.0.2"
features = ["build-cuda-plugins"]
optional = true

[dependencies.cuckoo_miner]
package = "cuckoo_miner"
path = "./cuckoo-miner"
version = "1.0.2"
features = []
optional = true

[dependencies.progpow_miner_opencl]
package = "progpow_miner"
path = "./progpow-miner"
version = "0.1.0"
features = ["opencl"]
optional = true

[dependencies.progpow_miner_cuda]
package = "progpow_miner"
path = "./progpow-miner"
version = "0.1.0"
features = ["cuda"]
optional = true

[dependencies.progpow_opencl]
package = "progpow"
path = "./progpow-rust"
features = ["opencl"]
optional = true

[dependencies.progpow_cuda]
package = "progpow"
path = "./progpow-rust"
features = ["cuda"]
optional = true

[build-dependencies]
built = "0.2"

[dev-dependencies]
cucumber_rust = { version = "^0.5.1", default-features = false }