[package]
name = "epic_miner_config"
version = "1.0.2"
authors = ["Epic Developers <mimblewimble@lists.launchpad.net>"]
description = "Configuration handling for the epic miner"
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/epic-miner"
workspace = ".."

[dependencies]
serde = "1"
serde_derive = "1"
toml = "0.4"
dirs = "1.0"

cuckoo_miner = { path = "../cuckoo-miner", version = "1.0.2" }
slog = { version = "~2.1", features = ["max_level_trace", "release_max_level_trace"] }
epic_miner_util = { path = "../util", version = "1.0.2" }
epic_miner_core = { path = "../core", version = "0.1.0" }