[package]
name = "epic_miner_plugin"
version = "1.0.2"
authors = ["Epic Developers <mimblewimble@lists.launchpad.net>"]
repository = "https://github.com/mimblewimble/epic-miner"
description = "Device specific plugins for the epic miner"
license = "Apache-2.0"
workspace = ".."

[dependencies]
byteorder = "^0.5"
blake2-rfc = "~0.2.17"
serde = "~1.0.8"
serde_derive = "~1.0.8"
serde_json = "~1.0.2"
libc = "0.2.24"
