[package]
name = "progpow_miner"
version = "0.1.0"

[dependencies]
lazy_static = "1.3.0"
bigint = "4.4.1"
keccak-hash = "0.2.0"
slog = { version = "~2.1", features = ["max_level_trace", "release_max_level_trace"] }

grin_miner_core = { path = "../core", version = "0.1.0" }
grin_miner_util = { path = "../util", version = "1.0.2" }
progpow = { path = "../progpow-rust", version = "0.1.0" }
