[package]
name = "randomx_miner"
version = "0.1.0"

[dependencies]
lazy_static = "1.3.0"
bigint = "4.4.1"
slog = { version = "~2.1", features = ["max_level_trace", "release_max_level_trace"] }

grin_miner_core = { path = "../core", version = "0.1.0" }
grin_miner_util = { path = "../util", version = "1.0.2" }
randomx = { path = "../../randomx", version = "0.1.0" }
