[package]
name = "randomx_miner"
version = "0.1.0"

[dependencies]
lazy_static = "1.3.0"
bigint = "4.4.1"
log = "^0.3"
slog = { version = "~2.1", features = ["max_level_trace", "release_max_level_trace"] }

epic_miner_core = { path = "../core", version = "0.1.0" }
epic_miner_util = { path = "../util", version = "1.0.2" }
randomx = { git = "https://github.com/EpicCash/randomx-rust.git", tag = "v0.1.1" }
