[package]
name = "epic_miner_util"
version = "1.0.2"
authors = ["Epic Developers <mimblewimble@lists.launchpad.net>"]
description = "Utilities for the epic miner"
repository = "https://github.com/mimblewimble/epic-miner"
license = "Apache-2.0"
workspace = ".."

[dependencies]
backtrace = "0.3"
byteorder = "1"
lazy_static = "0.2"
rand = "0.3"
serde = "1"
serde_derive = "1"
slog = { version = "~2.1", features = ["max_level_trace", "release_max_level_trace"] }
slog-term = "2.1"
slog-async = "2.1"
